<resources>
    <string name="app_name">Top Ridez</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="forgot_password_logo">MOT DE PASSE OUBLIÉ</string>
    <string name="font_regular_roboto">fonts/roboto_regular.ttf</string>
    <string name="font_bold_roboto">fonts/roboto_bold.ttf</string>
    <string name="font_semibold_opensans">fonts/openSans_semibold.ttf</string>
    <string name="font_medium_roboto">fonts/roboto_medium.ttf</string>
    <string name="font_regular_opensans">fonts/opensans-regular.ttf</string>
    <string name="font_bold_opensans">fonts/opensans-bold.ttf</string>
    <string name="apply">APPLY</string>
    <string name="terms">I agree to Terms &amp;amp; Conditions.</string>
    <string name="terms_error">You must agree to Top Ridez\'s Terms &amp;amp; Conditions in order to proceed.</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="caption_new_user">NEW DRIVER? SIGN UP NOW!</string>
    <string name="caption_signin">SIGN IN</string>
    <string name="caption_signup">SIGN UP</string>
    <string name="caption_update_profile">UPDATE PROFILE</string>
    <string name="caption_create_your_account">Create your account</string>
    <string name="caption_oops_forgot_password">Oops, i forgot my password!</string>
    <string name="caption_forgot_password">FORGOT PASSWORD</string>
    <string name="caption_retrive_your_password">RETRIVE YOUR PASSWORD</string>
    <string name="caption_edit_prf">EDIT PROFILE</string>
    <string name="caption_edit_your_account">Edit your account</string>
    <string name="caption_personal_details">Personal Details</string>
    <string name="caption_vehicle_details">Vehicle Details</string>
    <string name="caption_legal_details">Legal Details</string>
    <string name="bank_details">Bank Details</string>
    <string name="hint_name">Name</string>
    <string name="hint_username">User Name</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_date_of_birth">Date of Birth</string>
    <string name="hint_ssn">SSN</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_address">Address</string>
    <string name="hint_contact_number">Contact Number</string>
    <string name="hint_carmake">Car Make</string>
    <string name="hint_carmodel">Car Model</string>
    <string name="hint_cartype">Car Type</string>
    <string name="hint_carnumber">Car Year</string>
    <string name="hint_seatingcapacity">Seating Capacity</string>
    <string name="hint_driving_license">Driving License</string>
    <string name="hint_bank_name">Bank Name</string>
    <string name="hint_license_exp_date">License Expiry Date</string>
    <string name="hint_account_no">Account</string>
    <string name="hint_license_plate">License Plate</string>
    <string name="hint_routing">Routing</string>
    <string name="hint_insuarance">Insurance</string>
    <string name="all_trip">All Trip</string>
    <string name="Change_password_screen">Change Password</string>
    <string name="truck_type_trip">TRUCK TYPE : </string>
    <string name="booking_id">Reservation ID</string>
    <string name="pending">PENDING RESERVATION</string>
    <string name="accepted">ACCEPTED RESERVATION</string>
    <string name="user_cancell">CANCEL RESERVATION</string>
    <string name="user_cancelled">CANCELED RESERVATION</string>
    <string name="driver_unavailable">DRIVER UNAVAILABLE</string>
    <string name="completed">COMPLETED RESERVATION</string>
    <string name="driver_cancelled">DRIVER CANCELLED</string>
    <string name="call">CALL</string>
    <string name="on_trip">ON TRIP</string>
    <string name="driver_arrived">ARRIVED</string>
    <string name="i_hve_arrv">I HAVE ARRIVED</string>
    <string name="begin_trip">BEGIN TRIP</string>
    <string name="start_journey">START JOURNEY</string>
    <string name="journey_complet">COMPLETE</string>
    <string name="finished">END TRIP</string>
    <string name="drop_location">Drop Location</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="fin_distance">Distance</string>
    <string name="crrent_password">Current Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="dialog_choose">SELECT</string>
    <string name="please_select_image">Please select profile image.</string>
    <string name="enter_name">Please enter a valid name</string>
    <string name="minimum_name_charactor">Name should be minimum 4 characters.</string>
    <string name="maximum_name_charactor">Name should be maximum 30 characters.</string>
    <string name="please_enter_username">Please enter a valid username</string>
    <string name="minimum_user_charactor">Username should be minimum 4 characters.</string>
    <string name="maximum_user_charactor">Username should be maximum 30 characters.</string>
    <string name="username_error">Username should be characters,digits and underscore(A-Za-z0-9).</string>
    <string name="hint_password_msg">Please enter both letters and numbers</string>
    <string name="please_enter_password">Please enter password.</string>
    <string name="please_enter_confirm_password">Please enter confirm password.</string>
    <string name="password_length">Password length must be between 6-32 characters</string>
    <string name="large_password">Password should be maximum 32 characters.</string>
    <string name="password_does_not_match">Passwords do not match</string>
    <string name="enter_dob">Please select Date of Birth.</string>
    <string name="enter_ssn">You have to enter Social Security Number in order to proceed.</string>
    <string name="enter_ssn_valid">SSN is incorrect.</string>
    <string name="dob_error">Your age should be minimum 18 years in order for you to use this app.</string>
    <string name="select_gender">Please select gender.</string>
    <string name="please_enter_email">Please provide a valid email id</string>
    <string name="please_enter_valid_email">Please enter valid email.</string>
    <string name="please_enter_mobileno">Please enter a valid mobile number</string>
    <string name="min_mobile_number">Mobile number should be minimum 10 digits</string>
    <string name="please_enter_address">Please enter address.</string>
    <string name="please_enter_address_number">Address should be characters and digit(A-Za-z0-9).</string>
    <string name="please_enter_amount">Please provide an amount.</string>
    <string name="enter_carmake">Please enter vehicle make.</string>
    <string name="please_enter_carmake_number">Vehicle Make should be characters and digit(A-Za-z0-9).</string>
    <string name="enter_carmodel">Please enter vehicle model.</string>
    <string name="enter_cartype">Please select vehicle type.</string>
    <string name="enter_carnumber">Please enter vehicle number.</string>
    <string name="carnumber_error">Vehicle number should be characters,digits and underscore(A-Za-z0-9).</string>
    <string name="enter_seating_capacity">Please enter loading capacity.</string>
    <string name="seating_capacity_error">Seating capacity must be digits only(0-9).</string>
    <string name="seating_capacity_length">Maximum loading capacity can be 200 ton.</string>
    <string name="enter_driving_license">Please enter driving license.</string>
    <string name="enter_bank_name">Please enter Bank Name.</string>
    <string name="driving_license_length">Driving license length should be more than 16 characters.</string>
    <string name="account_no">Please enter Account Number</string>
    <string name="enter_license_expiry_date">Please select license expiry date.</string>
    <string name="enter_license_plate">Please enter license plate.</string>
    <string name="enter_rount">Please enter bank routing.</string>
    <string name="enter_invalid_rount">Please enter Invalid routing number.</string>
    <string name="license_plate_error">License plate should be characters and digits(A-Za-z0-9).</string>
    <string name="enter_insuarance">Please enter insuarance.</string>
    <string name="insuarance_error">Insuarance should be characters and digits(A-Za-z0-9).</string>
    <string name="please_enter_current_password">Please provide current password.</string>
    <string name="please_current_password">Not valid current password.</string>
    <string name="please_enter_new_password">Please provide new password.</string>
    <string name="password_new_length">New password length must be between 8-32 characters</string>
    <string name="password_new_confirm">New Password and confirm password doesn’t match.</string>
    <string name="menu_all_requests">All Requests</string>
    <string name="menu_change_password">Change Password</string>
    <string name="dialog_caption_signout">SIGNOUT</string>
    <string name="dialog_logout_msg">Are you sure want to logout?</string>
    <string name="dialog_caption_logout">LOGOUT</string>
    <string name="review">REVIEW</string>
    <string name="trip_details">Trip Details</string>
    <string name="track_truck">Tracking</string>
    <string name="pickup_point">PICKUP LOCATION</string>
    <string name="booking_date">RESERVATION DATE</string>
    <string name="drop_point">DROP-OFF LOACTION</string>
    <string name="truck_type">TRUCK TYPE</string>
    <string name="distance">DISTANCE</string>
    <string name="apr_trv_time">APPROX TIME</string>
    <string name="payment_status">STATUS</string>
    <string name="payment_type">PAYMENT TYPE</string>
    <string name="total_price">TOTAL AMOUNTS</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="are_you_sure_delete_trip">Are you sure you want to reject this trip?</string>
    <string name="delete_trip">REJECT TRIP</string>
    <string name="exit_app">Are you sure you want to exit this trip?</string>
    <string name="arrived_message">Are you sure you to continue with Begin Trip?</string>
    <string name="begin_message">Are you sure ? \n Do you want to continue Begin Trip.</string>
    <string name="all_trips">All Trips</string>
    <string name="time_remaining">TIME REMAINING</string>
    <string name="please_wait">Please Wait...</string>
    <string name="retry">Retry</string>
    <string name="sucess">Success</string>
    <string name="next">NEXT</string>
    <string name="read_and_write">Read and Write Storage Permission required for this app</string>
    <string name="on_duty">On Duty</string>
    <string name="off_duty">Off Duty</string>
    <string name="update_profile">Successfully updated your profile details</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="gps_disable">GPS is disabled in your device. Would you like to enable it?</string>
    <string name="no_record_found">No Record Found</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="pos">Pos</string>
    <string name="km"> miles</string>
    <string name="approx_price">Approx Price</string>
    <string name="final_price">Final Price</string>
    <string name="enter_bill_amount">Enter the bill amount</string>
    <string name="reason_for_ride">Reason for ride</string>
    <string name="a">A</string>
    <string name="d">D</string>
    <string name="forgot_password">F O R G O T&#160;&#160;P A S S W O R D</string>
    <string name="header_invite">Invite</string>
    <string name="invite_member">Invite Member</string>
    <string name="btn_invite">Invite</string>
    <string name="country">Country</string>
    <string name="mobile_number">Mobile Number</string>
</resources>