<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/img_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/background"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="#95000000"
        android:scaleType="fitXY"/>

    <RelativeLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50"
        android:background="@color/yellow">

        <RelativeLayout
            android:id="@+id/layout_menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="@dimen/margin_15">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menu_icon"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_15"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/txt_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_invite"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/font_size_18sp"
            android:textColor="@color/black"/>
        <Switch
            android:id="@+id/switch_driver_status"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginRight="@dimen/margin_15"
            android:textOn=""
            android:textOff=""
            android:text=""
            android:background="@drawable/driver_status_check"
            android:thumb="@android:color/transparent"
            android:track="@android:color/transparent"
            android:layout_alignParentRight="true"
            android:checked="false"
            android:layout_centerVertical="true"/>


    </RelativeLayout>

    <include layout="@layout/notify_alert"></include>

    <ScrollView
        android:id="@+id/chang_pass_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_20">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                >


                <ImageView
                    android:id="@+id/img_logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/logooo"
                    android:layout_centerHorizontal="true"
                    android:scaleType="fitXY"/>

                <TextView
                    android:id="@+id/txt_change_password_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_18sp"
                    android:text="@string/invite_member"
                    android:layout_below="@+id/img_logo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_20"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_change_password_logo"
                    android:layout_marginTop="@dimen/margin_20"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/layout_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_10">

                        <ImageView
                            android:id="@+id/img_country_code"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/country_code"
                            android:layout_centerVertical="true"/>

                        <EditText
                            android:id="@+id/edit_country_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/yellow"
                            android:hint="@string/country"
                            android:textSize="@dimen/font_size_16sp"
                            android:layout_toRightOf="@+id/img_country_code"
                            android:layout_marginLeft="@dimen/margin_15"
                            android:layout_centerVertical="true"
                            android:background="@android:color/transparent"
                            android:textColorHint="@color/yellow"
                            android:inputType="number"
                            android:singleLine="true"
                            android:focusable="false"/>

                    </RelativeLayout>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/textbox_bottom_line"
                        android:layout_marginTop="@dimen/margin_10"
                        android:scaleType="fitXY"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_10">

                        <ImageView
                            android:id="@+id/img_current_pass"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/mobile_icon"
                            android:layout_centerVertical="true"/>

                        <EditText
                            android:id="@+id/edit_mobile_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/yellow"
                            android:hint="@string/mobile_number"
                            android:textSize="@dimen/font_size_16sp"
                            android:layout_toRightOf="@+id/img_current_pass"
                            android:layout_marginLeft="@dimen/margin_15"
                            android:layout_centerVertical="true"
                            android:background="@android:color/transparent"
                            android:textColorHint="@color/yellow"
                            android:inputType="number"
                            android:singleLine="true"/>

                    </RelativeLayout>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/textbox_bottom_line"
                        android:layout_marginTop="@dimen/margin_10"
                        android:scaleType="fitXY"/>



                    <RelativeLayout
                        android:id="@+id/layout_change_password_button"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/height_35"
                        android:background="@drawable/rounded_border_background"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_50"
                        android:minWidth="@dimen/height_200"
                        >

                        <TextView
                            android:id="@+id/txt_change_pass"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/btn_invite"
                            android:textSize="@dimen/font_size_18sp"
                            android:textColor="@color/black"/>

                    </RelativeLayout>

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>