<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="fitXY"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="#10000000"
        android:scaleType="fitXY"/>

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logooo"
        android:scaleType="fitXY"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/img_logo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            >



            <TextView
                android:id="@+id/txt_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_logo"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/forgot_password"
                android:textSize="@dimen/font_size_18sp"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_30"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_50"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/margin_50"
                    android:layout_marginRight="@dimen/margin_50"
                    >
                    <ImageView
                        android:layout_width="@dimen/width_25"
                        android:layout_height="@dimen/height_25"
                        android:src="@drawable/icon_email"
                        android:layout_gravity="center_vertical"
                        />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_10"
                        android:textColorHint="@color/white">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edt_reg_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:lines="1"
                            android:imeOptions="actionDone"
                            android:background="@android:color/transparent"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="@dimen/font_size_20sp"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_1"
                    android:background="@drawable/textbox_bg"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:layout_marginLeft="@dimen/margin_50"
                    android:layout_marginRight="@dimen/margin_50"
                    ></View>

                <RelativeLayout
                    android:id="@+id/layout_retrive_your_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_40"
                    android:background="@drawable/rounded_border_background"
                    android:layout_marginLeft="@dimen/margin_50"
                    android:layout_marginRight="@dimen/margin_50"
                    android:paddingBottom="@dimen/margin_3"
                    android:layout_marginTop="@dimen/margin_20">

                    <TextView
                        android:id="@+id/tv_retrive_your_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/caption_retrive_your_password"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_size_15sp"
                        android:layout_centerInParent="true"
                        />

                </RelativeLayout>


            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>



    <include layout="@layout/notify_alert"></include>

</RelativeLayout>