<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_register">


    <ScrollView
        android:id="@+id/sv_driver_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_signin_register"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_15">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_50"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                >
                <ImageView
                    android:layout_width="@dimen/width_25"
                    android:layout_height="@dimen/height_25"
                    android:src="@drawable/license_plate"
                    android:layout_gravity="center_vertical"
                    />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:textColorHint="@color/white">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_reg_bank_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_bank_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:lines="1"
                        android:imeOptions="actionNext"
                        android:background="@android:color/transparent"
                        android:textColorHint="@color/white"
                        android:textSize="@dimen/font_size_20sp"
                        android:focusableInTouchMode="true"
                        android:textColor="@color/white"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_1"
                android:background="@drawable/textbox_bg"
                android:layout_marginBottom="@dimen/margin_10"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                ></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_50"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                >
                <ImageView
                    android:layout_width="@dimen/width_25"
                    android:layout_height="@dimen/height_25"
                    android:src="@drawable/license_expiry_icon"
                    android:layout_gravity="center_vertical"
                    />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:textColorHint="@color/white">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_reg_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_account_no"
                        android:inputType="number"
                        android:maxLines="1"
                        android:lines="1"
                        android:maxLength="9"
                        android:imeOptions="actionNext"
                        android:background="@android:color/transparent"
                        android:textColorHint="@color/white"
                        android:textSize="@dimen/font_size_20sp"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:textColor="@color/white"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_1"
                android:background="@drawable/textbox_bg"
                android:layout_marginBottom="@dimen/margin_10"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                ></View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_50"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                >
                <ImageView
                    android:layout_width="@dimen/width_25"
                    android:layout_height="@dimen/height_25"
                    android:src="@drawable/license_plate"
                    android:layout_gravity="center_vertical"
                    />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:textColorHint="@color/white">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_reg_routing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_routing"
                        android:inputType="number"
                        android:maxLines="1"
                        android:lines="1"
                        android:imeOptions="actionNext"
                        android:background="@android:color/transparent"
                        android:textColorHint="@color/white"
                        android:textSize="@dimen/font_size_20sp"
                        android:focusableInTouchMode="true"
                        android:maxLength="9"
                        android:textColor="@color/white"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_1"
                android:background="@drawable/textbox_bg"
                android:layout_marginBottom="@dimen/margin_10"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                ></View>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/layout_signin_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50"
        android:background="@color/yellow"
        android:layout_marginLeft="@dimen/width_30"
        android:layout_marginRight="@dimen/width_30"
        android:paddingBottom="@dimen/margin_3"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_20"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        >

        <TextView
            android:id="@+id/tv_signin_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caption_update_profile"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_15sp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>




</RelativeLayout>